# Makefile.am - build XPACMAN
# Copyright (C) 2024 Jose Da Silva
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#

appdatadir = ${datarootdir}/appdata
appdata_DATA = xpacman.appdata.xml
deskpixsdir = ${datarootdir}/pixmaps
deskpixs_DATA = 32x32/xpacman.xpm 32x32/xpacman.png
desktopdir = ${datarootdir}/applications
desktop_DATA = xpacman.desktop
ICONSDIR = ${datarootdir}/icons
HICOLORDIR = ${datarootdir}/icons/hicolor
hicolor32x32dir = ${HICOLORDIR}/32x32/apps
hicolor64x64dir = ${HICOLORDIR}/64x64/apps
hicolor128x128dir = ${HICOLORDIR}/128x128/apps
hicolor256x256dir = ${HICOLORDIR}/256x256/apps
hicolor32x32_DATA = 32x32/xpacman.png
hicolor64x64_DATA = 64x64/xpacman.png
hicolor128x128_DATA = 128x128/xpacman.png
hicolor256x256_DATA = 256x256/xpacman.png
metainfodir = ${datarootdir}/metainfo
metainfo_DATA = xpacman.metainfo.xml
mimedir = ${datarootdir}/mime
mimepackagesdir = ${datarootdir}/mime/packages
mimepackages_DATA = xpacman.xml

EXTRA_DIST = xpacman.appdata.xml xpacman.desktop xpacman.metainfo.xml	\
	     xpacman.xml 32x32/xpacman.xpm 32x32/xpacman.png		\
	     64x64/xpacman.png 128x128/xpacman.png 256x256/xpacman.png
